<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp" />
    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/ic_account_circle_black_24dp" />
    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_add_circle_black_24dp" />
    <item
        android:id="@+id/report"
        android:title="@string/report"
        android:icon="@drawable/ic_receipt_black_24dp"/>
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings_black_24dp"/>
</menu>