<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">

    <!--    =====================================================================    -->

    <!--    -   -   -   ICON    -   -   -    -->
    <ImageView
        android:id="@+id/icon_user"

        android:layout_width="240dp"
        android:layout_height="240dp"

        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginTop="50dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:src="@drawable/ic_launcher_foreground"
        />

    <!--    =====================================================================    -->

    <!--    -   -   -   EDIT_TEXT User    -   -   -    -->
    <EditText
        android:id="@+id/textUser"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf=" @id/icon_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:hint="@string/user_name"

        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"

        android:inputType="text"
        />

    <!--    -   -   -   EDIT_TEXT Pass    -   -   -    -->
    <EditText
        android:id="@+id/textPass"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/textUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:hint="@string/password"

        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"

        android:inputType="textPassword"
        />

    <!--    =====================================================================    -->

    <!--    -   -   -   Button Login    -   -   -    -->
    <Button
        android:id="@+id/button_login"

        android:layout_width="158dp"
        android:layout_height="45dp"

        android:layout_marginTop="85dp"
        android:layout_marginLeft="30dp"

        app:layout_constraintTop_toBottomOf="@+id/textPass"
        app:layout_constraintLeft_toLeftOf="parent"

        android:hint="@string/login"

        android:textColorHint="#000000"
        />

    <!--    -   -   -   Button Sign Up    -   -   -    -->
    <Button
        android:id="@+id/button_sign_up"

        android:layout_width="158dp"
        android:layout_height="45dp"

        android:layout_marginTop="85dp"
        android:layout_marginRight="30dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPass"

        android:hint="@string/sign_up"

        android:textColorHint="#000000" />

    <!--    =====================================================================    -->

    <!--    -   -   -   CheckBox Remember    -   -   -    -->
    <CheckBox
        android:id="@+id/checkBox_remember"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPass"

        android:hint="@string/remember_me"

        android:textColorHint="#FFFFFF" />

    <!--    =====================================================================    -->

    <!--    -   -   -   CheckBox Remember    -   -   -    -->
   <Button

    android:id="@+id/ForgotPassword"

        android:layout_width="100dp"
        android:layout_height="35dp"

        android:layout_marginTop="15dp"
        android:layout_marginRight="65dp"

        app:layout_constraintTop_toBottomOf="@+id/textPass"
        app:layout_constraintRight_toRightOf="parent"

        android:hint="@string/forgot_password"

        android:textColorHint="#FFFFFF"

        android:background="#00FFFFFF" />


</androidx.constraintlayout.widget.ConstraintLayout>